fixes scrollbar styling & compatibility

--- a/src/index.less
+++ b/src/index.less
@@ -120,21 +120,24 @@ button {
 }
 
 ::-webkit-scrollbar {
-  width: 16px;
+  width: 12px;
 }
 ::-webkit-scrollbar-thumb {
-  width: 8px;
   background: @sb-clr-2;
-  border: 4px solid @sb-bg;
-  border-block: none;
-  border-radius: 8px;
+  border-right: 4px solid @sb-bg;
+  border-radius: 4px 6px 6px 4px;
 
 }
 ::-webkit-scrollbar-track {
-  margin-top: calc(@navbar-height + 10px);
+  margin-top: calc(@navbar-height + 4px);
+  margin-bottom: 4px;
 }
 ::-webkit-scrollbar-corner {
  background: transparent;
+}
+* {
+  scrollbar-width: auto;
+  scrollbar-color: @sb-clr-2 transparent;
 }
 
 .clear {
