--- a/src/pages/list/style.less
+++ b/src/pages/list/style.less
@@ -3,7 +3,7 @@
 @import '../../sharedStyles/fonts.less';
 
 .list-page {
-  margin-top: 1.2rem;
+  margin-top: 1.5rem;
 
   header {
     display: flex;
